--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ bucket-credential.json
 .devcontainer
 .env.example
 bucket-credential-encoder-dw.json
+.env.example2
+bucket-credential-encoder-dw2.json
